--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
 		"axepress/wp-graphql-stubs": "^1.12.0",
 		"wp-cli/wp-cli-bundle": "^2.6",
 		"php-coveralls/php-coveralls": "^2.5",
-		"brianhenryie/strauss": "0.11.1",
+		"brianhenryie/strauss": "~0.12.0",
 		"mockery/mockery": "^1.5"
 	},
 	"config": {
