feat: add LinkedIn support

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
 		"league/oauth2-github": "^3.0",
 		"firebase/php-jwt": "^6.3",
 		"league/oauth2-google": "^4.0",
-		"league/oauth2-instagram": "^3.1"
+		"league/oauth2-instagram": "^3.1",
+		"league/oauth2-linkedin": "^5.1"
 	},
 	"require-dev": {
 		"lucatume/wp-browser": "^3.0",
@@ -78,7 +79,8 @@
 				"league/oauth2-facebook",
 				"league/oauth2-github",
 				"league/oauth2-google",
-				"league/oauth2-instagram"
+				"league/oauth2-instagram",
+				"league/oauth2-linkedin"
 			],
 			"delete_vendor_files": false,
 			"include_modified_date": false
