--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -28,9 +28,7 @@ jobs:
     steps:
       - name: Cancel previous runs of this workflow (pull requests only)
         if: ${{ github.event_name == 'pull_request' }}
-        uses: styfle/cancel-workflow-action@0.5.0
-        with:
-          access_token: ${{ github.token }}
+        uses: styfle/cancel-workflow-action@0.11.0
 
       - name: Checkout
         uses: actions/checkout@v3
@@ -38,16 +36,16 @@ jobs:
       - name: Setup PHP w/ Composer & WP-CLI
         uses: shivammathur/setup-php@v2
         with:
-          php-version: 8.0
-          coverage: none
+          php-version: 8.1
           extensions: mbstring, intl
-          tools: composer:v2
+          coverage: none
+          tools: composer:v2, wp-cli
 
       - name: Install dependencies
         uses: ramsey/composer-install@v2
         with:
           composer-options: "--no-progress"
-      
+
       - name: Setup WordPress
         run: |
           cp .env.dist .env
