--- a/.github/workflows/code-standard.yml
+++ b/.github/workflows/code-standard.yml
@@ -13,25 +13,22 @@ on:
 jobs:
   run:
     runs-on: ubuntu-latest
-    name: PHPCS
+    name: Checkout repo
 
     steps:
       - name: Cancel previous runs of this workflow (pull requests only)
         if: ${{ github.event_name == 'pull_request' }}
-        uses: styfle/cancel-workflow-action@0.5.0
-        with:
-          access_token: ${{ github.token }}
+        uses: styfle/cancel-workflow-action@0.11.0
 
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup PHP w/ Composer & WP-CLI
+      - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: 8.0
-          coverage: none
-          extensions: mbstring, intl
+          php-version: 8.1
           tools: composer:v2
+          coverage: none
 
       - name: Install dependencies
         uses: ramsey/composer-install@v2
