--- a/.github/workflows/code-standard.yml
+++ b/.github/workflows/code-standard.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   run:
     runs-on: ubuntu-latest
-    name: Checkout repo
+    name: PHPCS
 
     steps:
       - name: Cancel previous runs of this workflow (pull requests only)
