--- a/tests/functional.suite.dist.yml
+++ b/tests/functional.suite.dist.yml
@@ -19,11 +19,11 @@ modules:
         plugins:
           - wp-graphql/wp-graphql.php
           - wp-graphql-headless-login/wp-graphql-headless-login.php
-          - woocommerce/woocommerce.php
-          - wp-graphql-woocommerce/wp-graphql-woocommerce.php
+          # - woocommerce/woocommerce.php
+          # - wp-graphql-woocommerce/wp-graphql-woocommerce.php
         activatePlugins:
           - wp-graphql/wp-graphql.php
           - wp-graphql-headless-login/wp-graphql-headless-login.php
-          - woocommerce/woocommerce.php
-          - wp-graphql-woocommerce/wp-graphql-woocommerce.php
+          # - woocommerce/woocommerce.php
+          # - wp-graphql-woocommerce/wp-graphql-woocommerce.php
 bootstrap: bootstrap.php
