tests: refactor functional tests to Cest format

--- a/tests/functional.suite.dist.yml
+++ b/tests/functional.suite.dist.yml
@@ -8,6 +8,7 @@ modules:
     enabled:
       - \Helper\Functional
       - \Helper\Helper
+      - \Helper\GraphQL
       - Asserts
       - REST
       - WPDb
