--- a/tests/acceptance.suite.dist.yml
+++ b/tests/acceptance.suite.dist.yml
@@ -7,12 +7,25 @@
 
 actor: AcceptanceTester
 modules:
-    enabled:
-        - Asserts
-        - REST
-        - WPBrowser
-        - WPDb
-        - WPLoader
-    config:
-        WPDb:
-            cleanup: false
+  enabled:
+    - \Helper\Helper
+    - \Helper\GraphQL
+    - Asserts
+    - REST
+    - WPBrowser
+    - WPDb
+    - WPLoader
+  config:
+    WPDb:
+      cleanup: false
+    WPLoader:
+      plugins:
+        - wp-graphql/wp-graphql.php
+        - wp-graphql-headless-login/wp-graphql-headless-login.php
+        - woocommerce/woocommerce.php
+        - wp-graphql-woocommerce/wp-graphql-woocommerce.php
+      activatePlugins:
+        - wp-graphql/wp-graphql.php
+        - wp-graphql-headless-login/wp-graphql-headless-login.php
+        - woocommerce/woocommerce.php
+        - wp-graphql-woocommerce/wp-graphql-woocommerce.php
