--- a/tests/functional.suite.dist.yml
+++ b/tests/functional.suite.dist.yml
@@ -7,6 +7,8 @@ actor: FunctionalTester
 modules:
     enabled:
       - \Helper\Functional
+      - \Helper\Helper
+      - \Helper\GraphQL
       - Asserts
       - REST
       - WPDb
