--- a/.github/workflows/integration-testing.yml
+++ b/.github/workflows/integration-testing.yml
@@ -21,16 +21,31 @@ jobs:
 
     strategy:
       matrix:
-        php: [ '8.0', '7.4', ]
-        wordpress: [ '6.1', '6.0', '5.9', '5.8', '5.7', '5.6' ]
+        php: [ '8.1', '8.0', '7.4' ]
+        wordpress: [ '6.1', '6.0', '5.9' ]
         include:
-          - php: '8.1'
+          # WooGraphQL isnt compatible with PHP 8.1 yet.
+          - php: '8.0'
             wordpress: '6.1'
+            extensions: 'true'
             coverage: 1
-          - php: '8.1'
+          - php: '8.0'
             wordpress: '6.0'
-          - php: '8.1'
+            extensions: 'true'
+          - php: '8.0'
             wordpress: '5.9'
+            extensions: 'true'
+          # Older versions of WordPress
+          - php: '8.0'
+            wordpress: '5.8'
+          - php: '8.0'
+            wordpress: '5.7'
+          - php: '7.4'
+            wordpress: '5.8'
+          - php: '7.4'
+            wordpress: '5.7'
+          - php: '7.4'
+            wordpress: '5.6'
       fail-fast: false
 
     steps:
@@ -55,7 +70,23 @@ jobs:
         env:
           PHP_VERSION: ${{ matrix.php }}
           WP_VERSION: ${{ matrix.wordpress }}
+          INCLUDE_EXTENSIONS: ${{ matrix.extensions }}
         run: composer build-test
+
+      - name: Run Acceptance Tests w/ Docker
+        env:
+          COVERAGE: ${{ matrix.coverage }}
+          USING_XDEBUG: ${{ matrix.coverage }}
+          DEBUG: ${{ secrets.ACTIONS_STEP_DEBUG || matrix.debug }}
+          SKIP_TESTS_CLEANUP: ${{ matrix.coverage }}
+          SUITES: acceptance
+          PHP_VERSION: ${{ matrix.php }}
+          WP_VERSION: ${{ matrix.wordpress }}
+          INCLUDE_EXTENSIONS: ${{ matrix.extensions }}
+        run: |
+          if [ "${{ matrix.extensions }}" = "true" ]; then
+            composer run-test
+          fi
 
       - name: Run Functional Tests w/ Docker
         env:
@@ -83,3 +114,12 @@ jobs:
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: vendor/bin/php-coveralls -v
+      
+      - name: Push CodeCoverage to CodeClimate
+        if: ${{ matrix.coverage == 1 }}
+        uses: paambaati/codeclimate-action@v3.2.0
+        env:
+          CC_TEST_REPORTER_ID: f775c7e015158d3505156743f180c5b6a4fecb372c63f682cfcd2c7d32ae23cc
+        with:
+          coverageLocations: |
+            ${{github.workspace}}/tests/_output/*.xml:clover
