fix: exclude Psr from rename

--- a/composer.json
+++ b/composer.json
@@ -85,6 +85,9 @@
 				"league/oauth2-linkedin"
 			],
 			"exclude_from_prefix": {
+				"namespaces": [
+					"Psr"
+				],
 				"file_patterns": []
 			}
 		}
