tests: update acceptance test to use password provider

--- a/tests/acceptance.suite.dist.yml
+++ b/tests/acceptance.suite.dist.yml
@@ -17,8 +17,9 @@ modules:
     - WPLoader
   config:
     WPDb:
-      cleanup: false
+      cleanup: true
     WPLoader:
+      loadOnly: true
       plugins:
         - wp-graphql/wp-graphql.php
         - woocommerce/woocommerce.php
