--- a/tests/acceptance.suite.dist.yml
+++ b/tests/acceptance.suite.dist.yml
@@ -17,15 +17,16 @@ modules:
     - WPLoader
   config:
     WPDb:
-      cleanup: false
+      cleanup: true
     WPLoader:
+      loadOnly: true
       plugins:
         - wp-graphql/wp-graphql.php
-        - wp-graphql-headless-login/wp-graphql-headless-login.php
         - woocommerce/woocommerce.php
         - wp-graphql-woocommerce/wp-graphql-woocommerce.php
+        - wp-graphql-headless-login/wp-graphql-headless-login.php
       activatePlugins:
         - wp-graphql/wp-graphql.php
-        - wp-graphql-headless-login/wp-graphql-headless-login.php
-        - woocommerce/woocommerce.php
         - wp-graphql-woocommerce/wp-graphql-woocommerce.php
+        - woocommerce/woocommerce.php
+        - wp-graphql-headless-login/wp-graphql-headless-login.php
