--- a/.phpcs.xml.dist
+++ b/.phpcs.xml.dist
@@ -8,8 +8,9 @@
 	<file>./deactivation.php</file>
 	<file>./src/</file>
 	<exclude-pattern>*/vendor/*</exclude-pattern>
+	<exclude-pattern>/vendor-prefixed/</exclude-pattern>
 	<exclude-pattern>/node_modules/</exclude-pattern>
-	<exclude-pattern>*/tests/*</exclude-pattern>
+	<!-- <exclude-pattern>*/tests/*</exclude-pattern> -->
 
 	<!-- How to scan -->
 	<!-- Usage instructions: https://github.com/squizlabs/PHP_CodeSniffer/wiki/Usage -->
