--- a/.github/workflows/integration-testing.yml
+++ b/.github/workflows/integration-testing.yml
@@ -24,14 +24,10 @@ jobs:
         php: [ '8.1', '8.0', '7.4' ]
         wordpress: [ '6.2', '6.1', '6.0', '5.9' ]
         include:
-          # WooGraphQL isnt compatible with PHP 8.1 yet.
           - php: '8.1'
             wordpress: '6.2'
             extensions: 'true'
             coverage: 1
-          - php: '8.0'
-            wordpress: '6.0'
-            extensions: 'true'
           # Older versions of WordPress
           - php: '8.0'
             wordpress: '5.8'
@@ -43,6 +39,9 @@ jobs:
             wordpress: '5.7'
           - php: '7.4'
             wordpress: '5.6'
+        exclude:
+          - php: '7.4'
+            wordpress: '6.2'
       fail-fast: false
 
     steps:
