--- a/.github/workflows/integration-testing.yml
+++ b/.github/workflows/integration-testing.yml
@@ -22,19 +22,12 @@ jobs:
     strategy:
       matrix:
         php: [ '8.1', '8.0', '7.4' ]
-        wordpress: [ '6.1', '6.0', '5.9' ]
+        wordpress: [ '6.2', '6.1', '6.0', '5.9' ]
         include:
-          # WooGraphQL isnt compatible with PHP 8.1 yet.
-          - php: '8.0'
-            wordpress: '6.1'
+          - php: '8.1'
+            wordpress: '6.2'
             extensions: 'true'
             coverage: 1
-          - php: '8.0'
-            wordpress: '6.0'
-            extensions: 'true'
-          - php: '8.0'
-            wordpress: '5.9'
-            extensions: 'true'
           # Older versions of WordPress
           - php: '8.0'
             wordpress: '5.8'
@@ -46,6 +39,9 @@ jobs:
             wordpress: '5.7'
           - php: '7.4'
             wordpress: '5.6'
+        exclude:
+          - php: '7.4'
+            wordpress: '6.2'
       fail-fast: false
 
     steps:
