chore: add support lint to gh issue config

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,6 +3,9 @@ contact_links:
   - name: General Support Request
     url: https://github.com/axewp/wp-graphql-headless-login/discussions
     about: For general help requests, create a new topic in Github Discussions
+  - name: Premium Support Request
+    url: https://axewp.com/contact/
+    about: For premium support requests, custom development, or to sponsor a feature, please contact us directly.
   - name: Slack Community
     url: https://join.slack.com/t/wp-graphql/shared_invite/zt-3vloo60z-PpJV2PFIwEathWDOxCTTLA
     about: The WPGraphQL Slack is a great place to communicate in real-time. Ask questions, discuss features, get to know other folks using WPGraphQL.
