--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -4,7 +4,7 @@ contact_links:
     url: https://github.com/axewp/wp-graphql-headless-login/discussions
     about: For general help requests, create a new topic in Github Discussions
   - name: Premium Support Request
-    url: https://axewp.com/contact/
+    url: https://axepress.dev/contact/
     about: For premium support requests, custom development, or to sponsor a feature, please contact us directly.
   - name: Slack Community
     url: https://join.slack.com/t/wp-graphql/shared_invite/zt-3vloo60z-PpJV2PFIwEathWDOxCTTLA
