--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"@typescript-eslint/parser": "^5.59.6",
 		"@wordpress/babel-plugin-import-jsx-pragma": "^4.16.0",
 		"@wordpress/babel-preset-default": "^7.17.0",
+		"@wordpress/core-data": "^6.10.0",
 		"@wordpress/env": "^7.0.0",
 		"@wordpress/eslint-plugin": "^14.6.0",
 		"@wordpress/hooks": "^3.33.0",
