chore: update PHPCS ruleset

--- a/composer.json
+++ b/composer.json
@@ -42,14 +42,13 @@
 		"wp-graphql/wp-graphql-testcase": "^2.3",
 		"dealerdirect/phpcodesniffer-composer-installer": "^0.7",
 		"squizlabs/php_codesniffer": "^3.6",
-		"automattic/vipwpcs": "^2.3",
-		"wp-coding-standards/wpcs": "^2.3",
-		"phpcompatibility/phpcompatibility-wp": "^2.1",
 		"phpstan/phpstan": "^1.2",
 		"phpstan/extension-installer": "^1.1",
 		"szepeviktor/phpstan-wordpress": "^1.1.5",
 		"axepress/wp-graphql-stubs": "^1.12.0",
-		"wp-cli/wp-cli-bundle": "^2.6",
+		"axepress/wp-graphql-cs": "dev-main",
+		"wp-cli/wp-cli-bundle": "^2.7",
+		"wp-cli/wp-cli": "dev-main",
 		"php-coveralls/php-coveralls": "^2.5",
 		"mockery/mockery": "^1.5",
 		"php-stubs/woocommerce-stubs": "^7.3"
