--- a/.phpcs.xml.dist
+++ b/.phpcs.xml.dist
@@ -1,7 +1,8 @@
 <?xml version="1.0"?>
-<ruleset  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" name="WPGraphQL_Login" xsi:noNamespaceSchemaLocation="https://raw.githubusercontent.com/squizlabs/PHP_CodeSniffer/master/phpcs.xsd">	<description>Sniffs for plugins created with WPGraphQL Plugin Boilerplate.</description>
+<ruleset  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" name="WPGraphQL_Login" xsi:noNamespaceSchemaLocation="https://raw.githubusercontent.com/squizlabs/PHP_CodeSniffer/master/phpcs.xsd">
+	<description>Sniffs for the WPGraphQL plugin ecosystem </description>
 
-	<!-- What to scan -->
+	<!-- What to scan: include any root-level PHP files, and the /src folder -->
 	<file>./access-functions.php</file>
 	<file>./wp-graphql-headless-login.php</file>
 	<file>./activation.php</file>
@@ -10,9 +11,9 @@
 	<exclude-pattern>*/vendor/*</exclude-pattern>
 	<exclude-pattern>/vendor-prefixed/</exclude-pattern>
 	<exclude-pattern>/node_modules/</exclude-pattern>
-	<!-- <exclude-pattern>*/tests/*</exclude-pattern> -->
+	<exclude-pattern>*/tests/*</exclude-pattern>
 
-	<!-- How to scan -->
+	<!-- How to scan: include CLI args so you don't need to pass them manually -->
 	<!-- Usage instructions: https://github.com/squizlabs/PHP_CodeSniffer/wiki/Usage -->
 	<!-- Annotated ruleset: https://github.com/squizlabs/PHP_CodeSniffer/wiki/Annotated-ruleset.xml -->
 	<arg value="sp"/>
@@ -22,18 +23,27 @@
 	<arg name="colors"/>
 	<arg name="extensions" value="php"/>
 	<!-- Enables parallel processing when available for faster results. -->
-	<arg name="parallel" value="8"/>
+	<arg name="parallel" value="20"/>
 
-	<!-- Tests for PHP version compatibility -->
+	<!-- Ruleset Config: set these to match your project constraints-->
+
+	<!--
+		Tests for PHP version compatibility.
+		https://github.com/WordPress-Coding-Standards/WordPress-Coding-Standards#Recomended-additional-rulesets
+	-->
 	<config name="testVersion" value="7.4-"/>
-	<rule ref="PHPCompatibilityWP">
-		<include-pattern>*\.php$</include-pattern>
-	</rule>
 
-	<!-- https://github.com/WordPress-Coding-Standards/WordPress-Coding-Standards/wiki/Customizable-sniff-properties -->
+	<!--
+		Tests for WordPress version compatibility.
+		https://github.com/WordPress-Coding-Standards/WordPress-Coding-Standards/wiki/Customizable-sniff-properties
+	-->
 	<config name="minimum_supported_wp_version" value="5.6"/>
 
-	<!-- Plugin-specific expected properties-->
+	<!-- Rules: WPGraphQL Coding Standards -->
+	<!-- https://github.com/AxeWP/WPGraphQL-Coding-Standards/WPGraphQL/ruleset.xml -->
+	<rule ref="WPGraphQL" />
+
+	<!-- Individual rule configuration -->
 	<rule ref="WordPress.NamingConventions.PrefixAllGlobals">
 		<properties>
 			<!-- Value: replace the function, class, and variable prefixes used. Separate multiple prefixes with a comma. -->
@@ -44,36 +54,6 @@
 		<properties>
 			<!-- Value: replace the text domain used. -->
 			<property name="text_domain" type="array" value="wp-graphql-headless-login"/>
-		</properties>
-	</rule>
-
-	<!-- Rules: WordPress Coding Standards -->
-	<!-- https://github.com/WordPress-Coding-Standards/WordPress-Coding-Standards -->
-	<!-- https://github.com/WordPress-Coding-Standards/WordPress-Coding-Standards -->
-	<rule ref="WordPress-Core">
-		<exclude name="Generic.Arrays.DisallowShortArraySyntax"/>
-		<exclude name="WordPress.PHP.DisallowShortTernary.Found"/>
-		<exclude name="WordPress.CodeAnalysis.AssignmentInCondition.Found"/>
-		<exclude name="WordPress.Files.FileName" />
-		<exclude name="WordPress.NamingConventions.ValidVariableName" />
-		<!-- Maybe Add later: -->
-		<exclude name="Generic.Commenting.DocComment.MissingShort" />
-	</rule>
-	<rule ref="WordPress-Docs" />
-	<rule ref="WordPress-Extra" />
-	<rule ref="WordPress.WhiteSpace.ControlStructureSpacing">
-		<properties>
-			<property name="blank_line_check" value="true"/>
-		</properties>
-	</rule>
-
-	<!-- Enforce short array syntax -->
-	<rule ref="Generic.Arrays.DisallowLongArraySyntax"/>
-
-	<!--Disable DocBlock requirements if inherited -->
-	<rule ref="Squiz.Commenting.FunctionComment">
-		<properties>
-				<property name="skipIfInheritdoc" value="true" />
 		</properties>
 	</rule>
 
