--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
 	"require": {
 		"php": ">=7.4",
 		"axepress/wp-graphql-plugin-boilerplate":
-		"^0.0.8",
+		"dev-dev/remove-type_registry-property",
 		"league/oauth2-facebook": "^2.2",
 		"league/oauth2-github": "^3.0",
 		"firebase/php-jwt": "^6.3",
