--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
 	],
 	"require": {
 		"php": ">=7.4",
-		"axepress/wp-graphql-plugin-boilerplate":
-		"^0.0.8",
+		"axepress/wp-graphql-plugin-boilerplate":"0.0.9",
 		"league/oauth2-facebook": "^2.2",
 		"league/oauth2-github": "^3.0",
 		"firebase/php-jwt": "^6.3",
@@ -39,20 +38,16 @@
 		"codeception/phpunit-wrapper": "^9.0",
 		"codeception/util-universalframework": "^1.0",
 		"phpunit/phpunit": "^9.0",
+		"mockery/mockery": "^1.5",
 		"wp-graphql/wp-graphql-testcase": "^2.3",
-		"dealerdirect/phpcodesniffer-composer-installer": "^0.7",
-		"squizlabs/php_codesniffer": "^3.6",
-		"automattic/vipwpcs": "^2.3",
-		"wp-coding-standards/wpcs": "^2.3",
-		"phpcompatibility/phpcompatibility-wp": "^2.1",
 		"phpstan/phpstan": "^1.2",
 		"phpstan/extension-installer": "^1.1",
 		"szepeviktor/phpstan-wordpress": "^1.1.5",
+		"php-stubs/woocommerce-stubs": "^7.3",
 		"axepress/wp-graphql-stubs": "^1.12.0",
-		"wp-cli/wp-cli-bundle": "^2.6",
-		"php-coveralls/php-coveralls": "^2.5",
-		"mockery/mockery": "^1.5",
-		"php-stubs/woocommerce-stubs": "^7.3"
+		"axepress/wp-graphql-cs": "^1.0.0-beta",
+		"wp-cli/wp-cli-bundle": "^2.8.1",
+		"php-coveralls/php-coveralls": "^2.5"
 	},
 	"config": {
 		"allow-plugins": {
