--- a/.github/workflows/integration-testing.yml
+++ b/.github/workflows/integration-testing.yml
@@ -22,10 +22,10 @@ jobs:
     strategy:
       matrix:
         php: [ '8.1', '8.0', '7.4' ]
-        wordpress: [ '6.2', '6.1', '6.0', '5.9' ]
+        wordpress: [ '6.3', '6.2', '6.1', '6.0', '5.9' ]
         include:
-          - php: '8.1'
-            wordpress: '6.2'
+          - php: '8.2'
+            wordpress: '6.3'
             extensions: 'true'
             coverage: 1
           # Older versions of WordPress
@@ -42,6 +42,8 @@ jobs:
         exclude:
           - php: '7.4'
             wordpress: '6.2'
+          - php: '7.4'
+            wordpress: '6.3'
       fail-fast: false
 
     steps:
