dev: update deps, and move js to packages/admin

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
 	"extends": "./tsconfig.base.json",
-	"include": ["src/assets/**/*"],
-	"exclude": ["src/assets/js/admin/data"],
+	"include": ["packages/admin"],
+	"exclude": ["packages/admin/data"],
 	"compilerOptions": {
-		"baseUrl": "./",
+		"baseUrl": "./"
 	}
 }
