--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"lint:phpstan": "composer run-script phpstan",
 		"start": "rimraf build/* && cross-env BABEL_ENV=default CHECK_CIRCULAR_DEPS=true webpack --watch",
 		"ts:check": "tsc --build tsconfig.json",
-		"packages-update": "wp-scripts packages-update",
+		"packages-update": "wp-scripts packages-update --dist-tag=wp-5.8",
 		"wp-env": "wp-env"
 	},
 	"repository": {
@@ -49,6 +49,13 @@
 		]
 	},
 	"dependencies": {
+		"@wordpress/components": "^14.1.11",
+		"@wordpress/core-data": "^3.1.13",
+		"@wordpress/data": "^4.26.9",
+		"@wordpress/element": "^2.19.1",
+		"@wordpress/hooks": "^2.11.1",
+		"@wordpress/i18n": "^3.18.0",
+		"@wordpress/notices": "^3.1.6",
 		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
@@ -59,17 +66,14 @@
 		"@types/classnames": "^2.3.1",
 		"@types/eslint": "^8.44.2",
 		"@types/lodash": "^4.14.197",
-		"@types/wordpress__components": "^23.0.1",
+		"@types/wordpress__components": "^14.0.0",
 		"@types/wordpress__notices": "^3.27.0",
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
 		"@typescript-eslint/parser": "^5.62.0",
 		"@wordpress/babel-plugin-import-jsx-pragma": "^4.23.0",
 		"@wordpress/babel-preset-default": "^7.24.0",
-		"@wordpress/core-data": "^6.17.0",
 		"@wordpress/env": "^8.6.0",
 		"@wordpress/eslint-plugin": "^15.0.0",
-		"@wordpress/hooks": "^3.40.0",
-		"@wordpress/i18n": "^4.40.0",
 		"@wordpress/postcss-plugins-preset": "^4.24.0",
 		"@wordpress/prettier-config": "^2.23.0",
 		"@wordpress/readable-js-assets-webpack-plugin": "^2.23.0",
@@ -84,14 +88,15 @@
 		"eslint-import-resolver-node": "^0.3.9",
 		"eslint-import-resolver-webpack": "^0.13.6",
 		"eslint-plugin-eslint-comments": "^3.2.0",
-		"eslint-plugin-import": "^2.28.0",
+		"eslint-plugin-import": "^2.28.1",
 		"eslint-plugin-you-dont-need-lodash-underscore": "^6.12.0",
 		"glob": "^8.1.0",
 		"postcss": "^8.4.28",
 		"postcss-loader": "^7.3.3",
+		"prettier": "npm:wp-prettier@2.8.5",
 		"progress": "^2.0.3",
 		"rimraf": "^5.0.1",
-		"sass": "^1.66.0",
+		"sass": "^1.66.1",
 		"sass-loader": "^13.3.2",
 		"terser-webpack-plugin": "^5.3.9",
 		"typescript": "^5.1.6",
