--- a/composer.json
+++ b/composer.json
@@ -107,7 +107,7 @@
 		"install-test-env": "bash bin/install-test-env.sh",
 		"install-stan-env": "bash bin/install-stan-env.sh",
 		"docker-build": "bash bin/run-docker.sh build",
-		"delete-vendor-files": "rm -rf composer.lock vendor src/vendor/*",
+		"delete-vendor-files": "rm -rf composer.lock vendor src/vendor-prefixed/*",
 		"docker-run": "bash bin/run-docker.sh run",
 		"docker-destroy": "docker-compose down",
 		"build-and-run": [
