--- a/composer.json
+++ b/composer.json
@@ -44,8 +44,8 @@
 		"phpstan/extension-installer": "^1.1",
 		"szepeviktor/phpstan-wordpress": "^1.1.5",
 		"php-stubs/woocommerce-stubs": "^8.0",
-		"axepress/wp-graphql-stubs": "^1.12.0",
-		"axepress/wp-graphql-cs": "^1.0.0-beta",
+		"axepress/wp-graphql-stubs": "1.12.0",
+		"axepress/wp-graphql-cs": "^2.0.0-beta",
 		"wp-cli/wp-cli-bundle": "^2.8.1",
 		"php-coveralls/php-coveralls": "^2.5"
 	},
@@ -123,10 +123,10 @@
 			"php ./vendor/bin/phpcs -i"
 		],
 		"check-cs": [
-			"php ./vendor/bin/phpcs src"
+			"php ./vendor/bin/phpcs"
 		],
 		"fix-cs": [
-			"php ./vendor/bin/phpcbf src"
+			"php ./vendor/bin/phpcbf"
 		],
 		"phpstan": [
 			"vendor/bin/phpstan analyze --ansi --memory-limit=1G"
