--- a/.github/workflows/integration-testing.yml
+++ b/.github/workflows/integration-testing.yml
@@ -22,12 +22,14 @@ jobs:
     strategy:
       matrix:
         php: [ '8.1', '8.0', '7.4' ]
-        wordpress: [ '6.3', '6.2', '6.1', '6.0', '5.9' ]
+        wordpress: [ '6.4', '6.3', '6.2', '6.1', '6.0', '5.9' ]
         include:
           - php: '8.2'
-            wordpress: '6.3'
+            wordpress: '6.4'
             extensions: 'true'
             coverage: 1
+          - php: '8.2'
+            wordpress: '6.3'
           # Older versions of WordPress
           - php: '8.0'
             wordpress: '5.8'
@@ -42,6 +44,8 @@ jobs:
             wordpress: '6.2'
           - php: '7.4'
             wordpress: '6.3'
+          - php: '7.4'
+            wordpress: '6.4'
       fail-fast: false
 
     steps:
