ci: fix phpstan config

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -4,6 +4,7 @@ parameters:
 		treatPhpDocTypesAsCertain: false
 		bootstrapFiles:
 			- phpstan/constants.php
+			- vendor-prefixed/autoload.php
 		paths:
 			- wp-graphql-headless-login.php
 			- access-functions.php
@@ -12,7 +13,7 @@ parameters:
 			- src/
 		excludePaths:
 			analyse:
-				- vendor-prefixed
+				- vendor-prefixed/
 			analyseAndScan:
 				- ../wp-graphql/tests
 		scanFiles:
