--- a/.github/workflows/integration-testing.yml
+++ b/.github/workflows/integration-testing.yml
@@ -21,31 +21,20 @@ jobs:
 
     strategy:
       matrix:
-        php: [ '8.1', '8.0', '7.4' ]
-        wordpress: [ '6.4', '6.3', '6.2', '6.1', '6.0', '5.9' ]
+        php: [ '8.2', '8.1', '8.0' ]
+        wordpress: [ '6.4', '6.3', '6.2', '6.1', '6.0' ]
         include:
           - php: '8.2'
             wordpress: '6.4'
             extensions: 'true'
             coverage: 1
-          - php: '8.2'
-            wordpress: '6.3'
-          # Older versions of WordPress
-          - php: '8.0'
-            wordpress: '5.8'
-          - php: '8.0'
-            wordpress: '5.7'
           - php: '7.4'
-            wordpress: '5.8'
+            wordpress: '6.1'
           - php: '7.4'
-            wordpress: '5.7'
+            wordpress: '6.0'
         exclude:
-          - php: '7.4'
-            wordpress: '6.2'
-          - php: '7.4'
-            wordpress: '6.3'
-          - php: '7.4'
-            wordpress: '6.4'
+          - php: '8.2'
+            wordpress: '6.0'
       fail-fast: false
 
     steps:
@@ -114,7 +103,7 @@ jobs:
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: vendor/bin/php-coveralls -v
-      
+
       - name: Push CodeCoverage to CodeClimate
         if: ${{ matrix.coverage == 1 }}
         uses: paambaati/codeclimate-action@v3.2.0
