--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 	],
 	"require": {
 		"php": ">=7.4",
-		"axepress/wp-graphql-plugin-boilerplate":"0.0.9",
+		"axepress/wp-graphql-plugin-boilerplate": "0.0.9",
 		"league/oauth2-facebook": "^2.2",
 		"league/oauth2-github": "^3.0",
 		"firebase/php-jwt": "^6.3",
@@ -44,10 +44,11 @@
 		"phpstan/extension-installer": "^1.1",
 		"szepeviktor/phpstan-wordpress": "^1.1.5",
 		"php-stubs/woocommerce-stubs": "^8.0",
-		"axepress/wp-graphql-stubs": "1.12.0",
+		"axepress/wp-graphql-stubs": "1.14.0",
 		"axepress/wp-graphql-cs": "^2.0.0-beta",
 		"wp-cli/wp-cli-bundle": "^2.8.1",
-		"php-coveralls/php-coveralls": "^2.5"
+		"php-coveralls/php-coveralls": "^2.5",
+		"phpcompatibility/php-compatibility": "dev-develop as 9.99.99"
 	},
 	"config": {
 		"allow-plugins": {
