chore: cleanup CI files

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -12,7 +12,7 @@ parameters:
 			- src/
 		excludePaths:
 			analyse:
-				- vendor-prefixed
+				- vendor-prefixed/
 			analyseAndScan:
 				- ../wp-graphql/tests
 		scanFiles:
