--- a/.github/workflows/integration-testing.yml
+++ b/.github/workflows/integration-testing.yml
@@ -14,6 +14,13 @@ on:
       - '.github/workflows/*.yml'
       - '!docs/**'
 
+# Cancel previous workflow run groups that have not completed.
+concurrency:
+  # Group workflow runs by workflow name, along with the head branch ref of the pull request
+  # or otherwise the branch or tag ref.
+  group: ${{ github.workflow }}-${{ github.event_name == 'pull_request' && github.head_ref || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   continuous_integration:
     runs-on: ubuntu-latest
@@ -21,29 +28,29 @@ jobs:
 
     strategy:
       matrix:
-        php: [ '8.2', '8.1', '8.0' ]
-        wordpress: [ '6.4', '6.3', '6.2', '6.1', '6.0' ]
+        php: ["8.2", "8.1", "8.0"]
+        wordpress: ["6.5", "6.4", "6.3", "6.2", "6.1", "6.0" ]
         include:
-          - php: '8.2'
-            wordpress: '6.4'
-            extensions: 'true'
+          - php: "8.2"
+            wordpress: "6.5"
             coverage: 1
-          - php: '7.4'
-            wordpress: '6.1'
-          - php: '7.4'
-            wordpress: '6.0'
+          # Test old versions against PHP 8.0
+          - php: "7.4"
+            wordpress: "6.1"
+          - php: "7.4"
+            wordpress: "6.0"
         exclude:
-          - php: '8.2'
-            wordpress: '6.0'
+          # Old WP versions that dont support newer PHP versions
+          - php: "8.2"
+            wordpress: "6.0"
+          # New WP versions that dont support older PHP versions
+          - php: "8.0"
+            wordpress: "6.5"
       fail-fast: false
 
     steps:
-      - name: Cancel previous runs of this workflow (pull requests only)
-        if: ${{ github.event_name == 'pull_request' }}
-        uses: styfle/cancel-workflow-action@0.11.0
-
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install PHP
         uses: shivammathur/setup-php@v2
@@ -53,7 +60,7 @@ jobs:
           tools: composer:v2
 
       - name: Install dependencies
-        uses: ramsey/composer-install@v2
+        uses: ramsey/composer-install@v3
 
       - name: Build "testing" Docker Image
         env:
@@ -106,7 +113,7 @@ jobs:
 
       - name: Push CodeCoverage to CodeClimate
         if: ${{ matrix.coverage == 1 }}
-        uses: paambaati/codeclimate-action@v3.2.0
+        uses: paambaati/codeclimate-action@v5
         env:
           CC_TEST_REPORTER_ID: f775c7e015158d3505156743f180c5b6a4fecb372c63f682cfcd2c7d32ae23cc
         with:
