--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
 		"league/oauth2-linkedin": "^5.1"
 	},
 	"require-dev": {
-		"lucatume/wp-browser": "<3.5",
+		"lucatume/wp-browser": "^3.5",
 		"codeception/lib-innerbrowser": "^1.0",
 		"codeception/module-asserts": "^1.0",
 		"codeception/module-cli": "^1.0",
@@ -134,7 +134,7 @@
 			"vendor/bin/phpstan analyze --ansi --memory-limit=1G"
 		],
 	"strauss-install": [
-			"test -f ./bin/strauss.phar || curl -o bin/strauss.phar -L -C - https://github.com/BrianHenryIE/strauss/releases/download/0.17.0/strauss.phar"
+			"test -f ./bin/strauss.phar || curl -o bin/strauss.phar -L -C - https://github.com/BrianHenryIE/strauss/releases/download/0.19.1/strauss.phar"
 		],
 		"strauss": [
 			"@strauss-install",
