--- a/composer.json
+++ b/composer.json
@@ -110,7 +110,7 @@
 		"docker-build": "bash bin/run-docker.sh build",
 		"delete-vendor-files": "rm -rf composer.lock vendor src/vendor-prefixed/*",
 		"docker-run": "bash bin/run-docker.sh run",
-		"docker-destroy": "docker-compose down",
+		"docker-destroy": "docker compose down",
 		"build-and-run": [
 			"@docker-build",
 			"@docker-run"
