--- a/package.json
+++ b/package.json
@@ -49,63 +49,62 @@
 		]
 	},
 	"dependencies": {
-		"@wordpress/components": "^19.17.0",
-		"@wordpress/core-data": "^4.14.0",
-		"@wordpress/data": "^6.15.0",
-		"@wordpress/element": "^4.20.0",
-		"@wordpress/hooks": "^3.50.0",
-		"@wordpress/i18n": "^4.50.0",
-		"@wordpress/notices": "^3.31.0",
-		"uuid": "^9.0.1"
+		"@wordpress/components": "^28.6.0",
+		"@wordpress/core-data": "^7.6.0",
+		"@wordpress/data": "^10.6.0",
+		"@wordpress/element": "^6.6.0",
+		"@wordpress/hooks": "^4.6.0",
+		"@wordpress/i18n": "^5.6.0",
+		"@wordpress/notices": "^5.6.0",
+		"uuid": "^10.0.0"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.23.9",
-		"@babel/core": "^7.23.9",
-		"@babel/plugin-syntax-jsx": "^7.23.3",
+		"@babel/cli": "^7.24.8",
+		"@babel/core": "^7.25.2",
+		"@babel/plugin-syntax-jsx": "^7.24.7",
 		"@svgr/webpack": "^8.1.0",
-		"@types/classnames": "^2.3.1",
-		"@types/eslint": "^8.56.2",
-		"@types/lodash": "^4.14.202",
-		"@types/wordpress__components": "^14.0.10",
-		"@types/wordpress__notices": "^3.27.6",
-		"@typescript-eslint/eslint-plugin": "^6.20.0",
-		"@typescript-eslint/parser": "^6.20.0",
-		"@wordpress/babel-plugin-import-jsx-pragma": "^4.33.0",
-		"@wordpress/babel-preset-default": "^7.34.0",
-		"@wordpress/env": "^9.2.0",
-		"@wordpress/eslint-plugin": "^17.7.0",
-		"@wordpress/postcss-plugins-preset": "^4.34.0",
-		"@wordpress/prettier-config": "^3.7.0",
-		"@wordpress/readable-js-assets-webpack-plugin": "^2.33.0",
-		"@wordpress/scripts": "^27.1.0",
-		"@wordpress/stylelint-config": "^21.33.0",
+		"@types/lodash": "^4.17.7",
+		"@typescript-eslint/eslint-plugin": "^8.2.0",
+		"@typescript-eslint/parser": "^8.2.0",
+		"@wordpress/babel-plugin-import-jsx-pragma": "^5.6.0",
+		"@wordpress/babel-preset-default": "^8.6.0",
+		"@wordpress/env": "^10.6.0",
+		"@wordpress/eslint-plugin": "^20.3.0",
+		"@wordpress/postcss-plugins-preset": "^5.6.0",
+		"@wordpress/prettier-config": "^4.6.0",
+		"@wordpress/readable-js-assets-webpack-plugin": "^3.6.0",
+		"@wordpress/scripts": "^28.6.0",
+		"@wordpress/stylelint-config": "^22.6.0",
 		"babel-loader": "^9.1.3",
 		"babel-plugin-inline-json-import": "^0.3.2",
 		"cross-env": "^7.0.3",
-		"cssnano": "^6.0.3",
+		"cssnano": "^7.0.5",
 		"eslint-import-resolver-node": "^0.3.9",
 		"eslint-import-resolver-webpack": "^0.13.8",
 		"eslint-plugin-eslint-comments": "^3.2.0",
 		"eslint-plugin-import": "^2.29.1",
-		"eslint-plugin-you-dont-need-lodash-underscore": "^6.13.0",
-		"glob": "^10.3.10",
-		"postcss": "^8.4.33",
-		"postcss-loader": "^8.1.0",
-		"prettier": "npm:wp-prettier@3.0.3",
+		"eslint-plugin-you-dont-need-lodash-underscore": "^6.14.0",
+		"glob": "^10.4.5",
+		"postcss": "^8.4.41",
+		"postcss-loader": "^8.1.1",
+		"prettier": "npm:wp-prettier@3",
 		"progress": "^2.0.3",
-		"rimraf": "^5.0.5",
-		"sass": "^1.70.0",
-		"sass-loader": "^14.1.0",
+		"rimraf": "^5.0.10",
+		"sass": "^1.77.8",
+		"sass-loader": "^14.2.1",
 		"terser-webpack-plugin": "^5.3.10",
-		"typescript": "^5.3.3",
+		"typescript": "^5.5.4",
 		"url-loader": "^4.1.1",
-		"webpack": "^5.90.1",
-		"webpack-bundle-analyzer": "^4.10.1",
+		"webpack": "^5.94.0",
+		"webpack-bundle-analyzer": "^4.10.2",
 		"webpack-cli": "^5.1.4",
 		"webpack-rtl-plugin": "^2.0.0"
 	},
 	"overrides": {
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"eslint": "^8.57.0",
+		"@typescript-eslint/eslint-plugin": "^8.2.0",
+		"@typescript-eslint/parser": "^8.2.0"
 	}
 }
