--- a/tests/unit.suite.dist.yml
+++ b/tests/unit.suite.dist.yml
@@ -6,4 +6,4 @@ class_name: UnitTester
 modules:
     enabled:
         - Asserts
-        - \Helper\Unit
+        - \Tests\WPGraphQL\Login\Helper\Unit
