chore: cleanup npm deps

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -7,11 +7,19 @@
 		"declaration-block-no-duplicate-properties": null,
 		"declaration-property-unit-allowed-list": null,
 		"font-weight-notation": null,
-		"max-line-length": null,
 		"no-descending-specificity": null,
 		"no-duplicate-selectors": null,
 		"rule-empty-line-before": null,
 		"selector-class-pattern": null,
-		"value-keyword-case": null
+		"value-keyword-case": null,
+		"selector-pseudo-class-no-unknown": [
+			true,
+			{
+				"ignorePseudoClasses": [
+					"global",
+					"export"
+				]
+			}
+		]
 	}
 }
