--- a/package.json
+++ b/package.json
@@ -49,65 +49,56 @@
 		]
 	},
 	"dependencies": {
-		"@wordpress/components": "^28.6.0",
-		"@wordpress/core-data": "^7.6.0",
-		"@wordpress/data": "^10.6.0",
-		"@wordpress/element": "^6.6.0",
-		"@wordpress/hooks": "^4.6.0",
-		"@wordpress/i18n": "^5.6.0",
-		"@wordpress/icons": "^10.8.0",
-		"@wordpress/notices": "^5.6.0",
-		"clsx": "^2.1.1",
-		"uuid": "^10.0.0"
+		"@wordpress/api-fetch": "^7.9.0",
+		"@wordpress/components": "^28.9.0",
+		"@wordpress/compose": "^7.9.0",
+		"@wordpress/core-data": "^7.9.0",
+		"@wordpress/data": "^10.9.0",
+		"@wordpress/dom-ready": "^4.9.0",
+		"@wordpress/element": "^6.9.0",
+		"@wordpress/hooks": "^4.9.0",
+		"@wordpress/i18n": "^5.9.0",
+		"@wordpress/icons": "^10.9.0",
+		"@wordpress/notices": "^5.9.0",
+		"clsx": "^2.1.1"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.25.6",
-		"@babel/core": "^7.25.2",
-		"@babel/plugin-syntax-jsx": "^7.24.7",
+		"@babel/cli": "^7.25.7",
+		"@babel/core": "^7.25.7",
+		"@babel/plugin-syntax-jsx": "^7.25.7",
 		"@svgr/webpack": "^8.1.0",
-		"@types/lodash": "^4.17.7",
-		"@typescript-eslint/eslint-plugin": "^8.4.0",
-		"@typescript-eslint/parser": "^8.4.0",
-		"@wordpress/babel-plugin-import-jsx-pragma": "^5.6.0",
-		"@wordpress/babel-preset-default": "^8.6.0",
-		"@wordpress/env": "^10.6.0",
-		"@wordpress/eslint-plugin": "^20.3.0",
-		"@wordpress/postcss-plugins-preset": "^5.6.0",
-		"@wordpress/prettier-config": "^4.6.0",
-		"@wordpress/readable-js-assets-webpack-plugin": "^3.6.0",
-		"@wordpress/scripts": "^28.6.0",
-		"@wordpress/stylelint-config": "^22.6.0",
-		"babel-loader": "^9.1.3",
+		"@typescript-eslint/eslint-plugin": "^8.8.0",
+		"@typescript-eslint/parser": "^8.8.0",
+		"@wordpress/babel-plugin-import-jsx-pragma": "^5.9.0",
+		"@wordpress/babel-preset-default": "^8.9.0",
+		"@wordpress/env": "^10.9.0",
+		"@wordpress/eslint-plugin": "^21.2.0",
+		"@wordpress/prettier-config": "^4.9.0",
+		"@wordpress/readable-js-assets-webpack-plugin": "^3.9.0",
+		"@wordpress/scripts": "^30.1.0",
+		"@wordpress/stylelint-config": "^23.1.0",
+		"babel-loader": "^9.2.1",
 		"babel-plugin-inline-json-import": "^0.3.2",
 		"cross-env": "^7.0.3",
-		"cssnano": "^7.0.6",
 		"eslint-import-resolver-node": "^0.3.9",
 		"eslint-import-resolver-webpack": "^0.13.9",
 		"eslint-plugin-eslint-comments": "^3.2.0",
-		"eslint-plugin-import": "^2.30.0",
-		"eslint-plugin-you-dont-need-lodash-underscore": "^6.14.0",
-		"glob": "^10.4.5",
-		"postcss": "^8.4.45",
-		"postcss-loader": "^8.1.1",
+		"eslint-plugin-import": "^2.31.0",
 		"prettier": "npm:wp-prettier@3",
-		"progress": "^2.0.3",
-		"rimraf": "^5.0.10",
-		"sass": "^1.78.0",
-		"sass-loader": "^14.2.1",
+		"rimraf": "^6.0.1",
 		"terser-webpack-plugin": "^5.3.10",
 		"tsconfig-paths-webpack-plugin": "^4.1.0",
-		"typescript": "^5.5.4",
+		"typescript": "^5.6.2",
 		"url-loader": "^4.1.1",
-		"webpack": "^5.94.0",
+		"webpack": "^5.95.0",
 		"webpack-bundle-analyzer": "^4.10.2",
-		"webpack-cli": "^5.1.4",
-		"webpack-rtl-plugin": "^2.0.0"
+		"webpack-cli": "^5.1.4"
 	},
 	"overrides": {
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
+		"react": "18.3.0",
+		"react-dom": "18.3.0",
 		"eslint": "^8.57.0",
-		"@typescript-eslint/eslint-plugin": "^8.4.0",
-		"@typescript-eslint/parser": "^8.4.0"
+		"@typescript-eslint/eslint-plugin": "^8.8.0",
+		"@typescript-eslint/parser": "^8.8.0"
 	}
 }
