chore: update workflows and cleanup.

--- a/.docker/.env.ci
+++ b/.docker/.env.ci
@@ -5,8 +5,7 @@ PLUGIN_SLUG=wp-graphql-headless-login
 ## If using Local by Flywheel, you can `open AdminerEvo` and find the values in the URL: `http://localhost:{DB_PORT}/?username={DB_USER}&db={DB_NAME}`
 ## NOTE: Codeception may modify or the database during testing. If you want to preserve your local data, create a new database and use that for the `DB_NAME`.
 DB_NAME=wordpress
-# localhost creates issues with wp config create command
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_USER=root
 DB_PASSWORD=password
 DB_PORT=3306
@@ -14,7 +13,7 @@ DB_PORT=3306
 # The local path to the WordPress root directory, the one containing the wp-load.php file.
 ## This can be a relative path from the directory that contains the codeception.yml file, or an absolute path.
 ## If you are using Local by Flywheel, you can find the path in the Local by Flywheel app under the site's settings.
-WORDPRESS_ROOT_DIR="/tmp/wordpress"
+WORDPRESS_ROOT_DIR="/var/www/html"
 
 # This table prefix used by the WordPress site, and in Acceptance tests.
 WORDPRESS_TABLE_PREFIX=wp_
@@ -54,12 +53,7 @@ TEST_DB_DSN="mysql:host=${TEST_DB_HOST};port=${TEST_DB_PORT};dbname=${TEST_DB_NA
 # The following variables are used to determine test behavior.
 
 # Include 3rd party plugins (e.g. WooCommerce) in the tests.
-INCLUDE_EXTENSIONS=true
 # Skips recreating the database before running the tests.
 SKIP_DB_CREATE=false
 # Skips configuring the WordPress installation
 SKIP_WP_SETUP=false
-# Skips cleanup after the test suite run.
-SKIP_TESTS_CLEANUP=true
-# The default Codeception suite to run.
-SUITES=wpunit
