--- a/.github/workflows/code-standard.yml
+++ b/.github/workflows/code-standard.yml
@@ -39,4 +39,4 @@ jobs:
           composer-options: "--no-progress"
 
       - name: Run PHP_CodeSniffer
-        run: composer run-script lint
+        run: composer run-script lint -- --report-full --report-checkstyle=./phpcs-report.xml
