--- a/.github/workflows/schema-linter.yml
+++ b/.github/workflows/schema-linter.yml
@@ -20,15 +20,17 @@ jobs:
   run:
     runs-on: ubuntu-latest
     name: Lint WPGraphQL Schema
+
     services:
-      mariadb:
+      mysql:
         image: mariadb:10
         ports:
           - 3306:3306
         env:
-          MYSQL_ROOT_PASSWORD: root
+          MYSQL_ROOT_PASSWORD: password
         # Ensure docker waits for mariadb to start
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -52,11 +54,15 @@ jobs:
       - name: Setup WordPress
         run: |
           cp .env.dist .env
+          # Append to the .env file
+          echo "INCLUDE_EXTENSIONS=${{ env.INCLUDE_EXTENSIONS }}" >> .env
           composer run install-test-env
+        env:
+          INCLUDE_EXTENSIONS: ''
 
       - name: Generate the Static Schema
         run: |
-          cd /tmp/wordpress/
+          cd /tmp/wordpress
           # Output: /tmp/schema.graphql
           wp graphql generate-static-schema
 
