--- a/.github/workflows/upload-release.yml
+++ b/.github/workflows/upload-release.yml
@@ -26,6 +26,11 @@ jobs:
         with:
           composer-options: "--no-progress"
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
       - name: Install Node.js dependencies
         run: npm ci
         env:
@@ -33,11 +38,11 @@ jobs:
 
       - name: Build assets
         run: |
-          composer install --no-dev --optimize-autoloader
           npm run build
 
       - name: Create Artifact
         run: |
+          composer install --no-dev --optimize-autoloader
           mkdir plugin-build
           composer archive -vvv --format=zip --file="plugin-build/wp-graphql-headless-login"
 
