--- a/codeception.dist.yml
+++ b/codeception.dist.yml
@@ -1,28 +1,15 @@
 paths:
-    tests: '%TESTS_DIR%'
-    output: '%TESTS_OUTPUT%'
-    data: '%TESTS_DATA%'
-    support: '%TESTS_SUPPORT%'
-    envs: '%TESTS_ENVS%'
-params:
-    - env
-    - .env
+    tests: tests
+    output: tests/_output
+    data: tests/_data
+    support: tests/_support
+    envs: tests/_envs
 actor_suffix: Tester
+params:
+    - .env
 settings:
     colors: true
     memory_limit: 1024M
-coverage:
-    enabled: true
-    remote: false
-    c3_url: '%WP_URL%/wp-content/plugins/wp-graphql-headless-login/wp-graphql-headless-login.php'
-    include:
-        - src/*
-        - access-functions.php
-    exclude:
-        - vendor/*
-        - vendor-prefixed/*
-        - src/vendor/*
-    show_only_summary: false
 extensions:
     enabled:
         - Codeception\Extension\RunFailed
@@ -34,45 +21,67 @@ extensions:
         - Codeception\Command\GenerateWPAjax
         - Codeception\Command\GenerateWPCanonical
         - Codeception\Command\GenerateWPXMLRPC
+coverage:
+    enabled: true
+    remote: false
+    c3_url: '%WORDPRESS_URL%/wp-content/plugins/wp-graphql-headless-login/wp-graphql-headless-login.php'
+    include:
+        - src/*
+        - /access-functions.php
+        - /activation.php
+        - /deactivation.php
+    exclude:
+        - /bin/*
+        - /docs/*
+        - /node_modules/*
+        - /packages/*
+        - /tests/*
+        - /vendor-prefixed/*
+        - /vendor/*
+    show_only_summary: false
 modules:
     config:
         WPDb:
-            dsn: 'mysql:host=%DB_HOST%;dbname=%DB_NAME%'
-            user: '%DB_USER%'
-            password: '%DB_PASSWORD%'
+            dsn: '%TEST_DB_DSN%'
+            user: '%TEST_DB_USER%'
+            password: '%TEST_DB_PASSWORD%'
             populator: 'mysql -u $user -p$password -h $host $dbname < $dump'
             dump: 'tests/_data/dump.sql'
             populate: true
             cleanup: true
             waitlock: 0
-            url: '%WP_URL%'
+            url: '%WORDPRESS_URL%'
             urlReplacement: true
-            tablePrefix: '%WP_TABLE_PREFIX%'
+            tablePrefix: '%WORDPRESS_TABLE_PREFIX%'
         WPBrowser:
-            url: '%WP_URL%'
+            url: '%WORDPRESS_URL%'
             wpRootFolder: '%WP_ROOT_FOLDER%'
-            adminUsername: '%ADMIN_USERNAME%'
-            adminPassword: '%ADMIN_PASSWORD%'
-            adminPath: '/wp-admin'
+            adminUsername: '%WORDPRESS_ADMIN_USER%'
+            adminPassword: '%WORDPRESS_ADMIN_PASSWORD%'
+            adminPath: '%WORDPRESS_ADMIN_PATH%'
+            headers:
+              X_WPBROWSER_REQUEST: 1
+              X_TEST_REQUEST: 1
+              X_APM_REQUEST: 1
             cookies: false
         REST:
             depends: WPBrowser
-            url: '%WP_URL%'
+            url: '%WORDPRESS_URL%'
         WPFilesystem:
-            wpRootFolder: '%WP_ROOT_FOLDER%'
+            wpRootFolder: '%WORDPRESS_ROOT_DIR%'
             plugins: '/wp-content/plugins'
             mu-plugins: '/wp-content/mu-plugins'
             themes: '/wp-content/themes'
             uploads: '/wp-content/uploads'
         WPLoader:
-            wpRootFolder: '%WP_ROOT_FOLDER%'
-            dbName: '%DB_NAME%'
-            dbHost: '%DB_HOST%'
-            dbUser: '%DB_USER%'
-            dbPassword: '%DB_PASSWORD%'
-            tablePrefix: '%WP_TABLE_PREFIX%'
-            domain: '%WP_DOMAIN%'
-            adminEmail: '%ADMIN_EMAIL%'
+            wpRootFolder: '%WORDPRESS_ROOT_DIR%'
+            dbName: '%TEST_DB_NAME%'
+            dbHost: '%TEST_DB_HOST%'
+            dbUser: '%TEST_DB_USER%'
+            dbPassword: '%TEST_DB_PASSWORD%'
+            tablePrefix: '%TEST_TABLE_PREFIX%'
+            domain: '%WORDPRESS_DOMAIN%'
+            adminEmail: '%WORDPRESS_ADMIN_EMAIL%'
             title: 'Test'
             plugins:
                 - wp-graphql/wp-graphql.php
